# Conway-s_Life_game

./: README.md
.config/: glife.ini
data/: saida.txt
lib/: CMakeLists.txt  canvas.cpp  canvas.h  tip.cpp  tip.h
src/: README.md  life.cpp  life.h  main.cpp
